cssfix lange taaktype namen

--- a/app/frontend/assets/styles/components/_forms.scss
+++ b/app/frontend/assets/styles/components/_forms.scss
@@ -1157,6 +1157,7 @@ form.taken-aanmaken {
                 label {
                     span {
                         max-width: 20em;
+                        word-break: break-word;
                     }
                 }
 
