--- a/app/frontend/assets/styles/components/_infosheet.scss
+++ b/app/frontend/assets/styles/components/_infosheet.scss
@@ -74,6 +74,7 @@ dialog.infosheet {
             margin-top: 0;
             padding-right: 1em;
             font-size: 1.375rem;
+            word-break: break-word;
         }
     }
     .footer {
