--- a/app/frontend/assets/styles/components/_infosheet.scss
+++ b/app/frontend/assets/styles/components/_infosheet.scss
@@ -136,7 +136,7 @@ dialog.infosheet {
 }
 
 dialog::backdrop {
-    background-color: rgba(0, 0, 0, 0.35);
-    position: relative;
+    background-color: rgba(0, 0, 0, 0.25);
+    position: fixed;
     z-index: 2900;
 }
