--- a/app/frontend/assets/styles/components/_forms.scss
+++ b/app/frontend/assets/styles/components/_forms.scss
@@ -991,6 +991,7 @@ form.taken-aanmaken {
             label {
                 font-size: 0.777rem;
                 font-weight: 400;
+                word-break: break-word;
             }
         }
 
