--- a/app/apps/main/templates/melding/melding_detail.html
+++ b/app/apps/main/templates/melding/melding_detail.html
@@ -81,29 +81,13 @@
                             <div class="grid-container">
                                 <div class="grid-item">
                                     {% include "melding/melding_detail_locaties_lichtmasten.html" with locaties=type_locaties melding=melding lichtmasten=locaties.lichtmasten only %}
-                                    {% if bijlagen|length > 0 %}
-                                        {% include "melding/detail/bijlagen.html" with bijlagen=bijlagen only %}
-                                    {% endif %}
+                                </div>
+                            </div>
+                            <div class="grid-container grid-container--half">
+                                <div class="grid-item">
                                     <section class="section--seperated" data-testid="detailMelding">
                                         <div class="container__details melding">
-                                            <h2>
-                                                <svg width="20"
-                                                     height="22"
-                                                     viewBox="0 0 20 22"
-                                                     fill="none"
-                                                     xmlns="http://www.w3.org/2000/svg">
-                                                    <path d="M4 4H7V6H4V4Z" fill="#00811F" />
-                                                    <path d="M7 8H4V10H7V8Z" fill="#00811F" />
-                                                    <path d="M4 12H7V14H4V12Z" fill="#00811F" />
-                                                    <path d="M7 16H4V18H7V16Z" fill="#00811F" />
-                                                    <path d="M8 4H16V6H8V4Z" fill="#00811F" />
-                                                    <path d="M16 8H8V10H16V8Z" fill="#00811F" />
-                                                    <path d="M8 12H16V14H8V12Z" fill="#00811F" />
-                                                    <path d="M16 16H8V18H16V16Z" fill="#00811F" />
-                                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M0 0V22H20V0H0ZM18 2H2V20H18V2Z" fill="#00811F" />
-                                                </svg>
-                                                Melding
-                                            </h2>
+                                            <h2>Meldingdetails</h2>
                                             <div>
                                                 {% if melding.signalen_voor_melding|length > 1 %}
                                                     <div class="display--flex--md">
@@ -312,7 +296,15 @@
                                          id="melding_detail_acties">
                                         {% include acties_template with disable_stream=True %}
                                     </div>
-                                    {% if melding.signalen_voor_melding|length > 1 %}
+                                    <section class="section--separated">
+                                        <div class="container__details">
+                                            <h2>Foto's</h2>
+                                            {% if bijlagen|length > 0 %}
+                                                {% include "melding/detail/bijlagen.html" with bijlagen=bijlagen only %}
+                                            {% endif %}
+                                        </div>
+                                    </section>
+                                    {% if melding.signalen_voor_melding|length > 0 %}
                                         <div class="alert alert--info">
                                             <span>
                                                 <svg width="24"
@@ -333,17 +325,7 @@
                                     {% endif %}
                                     <section class="section--seperated">
                                         <div class="container__details">
-                                            <h2>
-                                                <svg width="21"
-                                                     height="22"
-                                                     viewBox="0 0 21 22"
-                                                     fill="none"
-                                                     xmlns="http://www.w3.org/2000/svg">
-                                                    <path d="M19.0009 11C19.0009 15.9706 14.9715 20 10.0009 20C6.96008 20 4.27145 18.4919 2.64218 16.1829L0.953125 17.2577C2.93876 20.1233 6.25068 22 10.0009 22C16.0761 22 21.0009 17.0751 21.0009 11C21.0009 4.92487 16.0761 0 10.0009 0C6.96339 0 4.21339 1.23121 2.22279 3.22181L1.00098 2V6H5.00098L3.637 4.63602C5.26568 3.00735 7.51567 2 10.0009 2C14.9715 2 19.0009 6.02944 19.0009 11Z" fill="#00811F" />
-                                                    <path d="M9.00098 5H11.001V11.8573L15.1973 14.28L14.1973 16.0121L9.00098 13V5Z" fill="#00811F" />
-                                                </svg>
-                                                Tijdlijn
-                                            </h2>
+                                            <h2>Tijdlijn</h2>
                                             {% if melding.status.naam != "afgehandeld" and melding.status.naam != "geannuleerd" %}
                                                 <turbo-frame id="informatie_toevoegen" src="{% url 'informatie_toevoegen' melding.uuid %}">
                                                 </turbo-frame>
