--- a/app/frontend/assets/styles/components/_incident-details.scss
+++ b/app/frontend/assets/styles/components/_incident-details.scss
@@ -91,7 +91,8 @@
         display: flex;
         align-items: center;
         padding-bottom: 1rem;
-        border-bottom: 1px solid $gray-tint04;
+        color: $green-tint01;
+        font-size: calc(1rem + 0.25vw);
 
         svg {
             margin-right: 8px;
