search with max 3 terms

--- a/app/apps/main/templates/melding/melding_lijst.html
+++ b/app/apps/main/templates/melding/melding_lijst.html
@@ -67,6 +67,8 @@
                         <div class="searchinfo-tooltip">
                             <span>Maak gebruik van komma's om op meerdere termen te zoeken.
                                 <br>
+                                Er kan maximaal op 3 termen gezocht worden.
+                                <br>
                                 <br>
                             Klik op het kruisje om het zoeken te beëindigen.</span>
                         </div>
