--- a/app/apps/main/templates/melding/melding_detail_locaties.html
+++ b/app/apps/main/templates/melding/melding_detail_locaties.html
@@ -7,7 +7,7 @@
                 Locatie
             {% endif %}
         </h2>
-        <div>
+        <div class="has-background--white">
             {% include "melding/melding_detail_locaties_graven.html" with melding=melding locaties=locaties.graven only %}
             {% include "melding/melding_detail_locaties_adressen.html" with melding=melding locaties=locaties.adressen only %}
         </div>
