--- a/app/frontend/assets/styles/_base.scss
+++ b/app/frontend/assets/styles/_base.scss
@@ -62,6 +62,7 @@ html {
         main {
             padding: 1em 0.75em 0;
             margin-bottom: 5em;
+            box-sizing: border-box;
             max-width: 2000px;
             margin: 0 auto;
         }
@@ -143,7 +144,9 @@ main {
     gap: 32px;
 
     + .grid-container {
-        margin-top: 32px;
+        .grid-item:not(:empty) {
+            margin-top: 32px;
+        }
     }
 
     @media (min-width: map-get($grid-breakpoints, md)) {
@@ -326,6 +329,7 @@ a,
 
     &.link--back {
         @include has-icon();
+        height: 36px;
         padding-left: 10px;
         font-size: 0.875em;
         font-weight: 700;
@@ -436,6 +440,14 @@ p {
 @mixin list-clean {
     list-style-type: none;
     padding: 0;
+}
+
+dl,
+ul {
+    .has-background--white & {
+        margin-top: 0;
+        margin-bottom: 0;
+    }
 }
 
 ul {
@@ -598,14 +610,14 @@ dl {
 
 // SECTIONS
 section {
-    &.section--seperated {
+    &.section--separated {
         padding: 1em 0 0.75em;
 
         &__no-border-bottom {
             border-bottom: 0;
         }
     }
-    &.section--seperated--l {
+    &.section--separated--l {
         padding: 1em 0 4em;
         border-bottom: 1px solid #a6a6a6;
 
@@ -670,6 +682,11 @@ body.no-js {
 }
 
 // HELPER-CLASSES
+
+.has-background--white {
+    padding: 1em;
+    background-color: $white;
+}
 .keyboard-focus {
     outline: 2px solid blue !important;
 }
