--- a/app/apps/main/templates/melding/melding_detail_locaties_adres_kaart.html
+++ b/app/apps/main/templates/melding/melding_detail_locaties_adres_kaart.html
@@ -42,7 +42,7 @@
         </div>
     </div>
 </div>
-<div class="container__map full-width">
+<div class="container__map">
     <div class="map"
          id="incidentMap"
          data-action="touchstart->detail#onTwoFingerDrag touchend->detail#onTwoFingerDrag">
