--- a/app/frontend/assets/styles/components/_incident-details.scss
+++ b/app/frontend/assets/styles/components/_incident-details.scss
@@ -1,15 +1,14 @@
 .page__detail {
     padding: 2rem 0 5em;
     h1 {
-        margin-bottom: 0;
+        margin: 0;
         + span {
             font-size: 0.875em;
         }
     }
 
     .aside {
-        font-size: 0.875em;
-
+        position: relative;
         .btn {
             text-align: left;
             width: auto;
@@ -19,6 +18,7 @@
 
             &-textlink {
                 text-decoration: $link-decoration;
+                margin: 0 0 0 0.75em;
             }
         }
 
@@ -35,12 +35,15 @@
 .container__actions {
     background-color: $blue-100;
     width: 100%;
-    padding: 0 1em 1em;
+    max-width: 2000px;
     z-index: 1000;
     border: 1px solid transparent;
     box-sizing: border-box;
+    text-align: right;
+    // transition: transform $transition-duration-default ease-out;
     p {
         margin-bottom: 0.5rem;
+        max-width: none;
     }
     p:not(:first-of-type) {
         margin-top: 0.5rem;
@@ -48,6 +51,12 @@
 
     .alert {
         display: flex;
+    }
+
+    .btn {
+        &:last-child {
+            margin-right: 0;
+        }
     }
 
     .btn-checkbox {
@@ -61,21 +70,41 @@
         }
     }
 
+    .wrapper {
+        padding: 1em 0.75em;
+        transform: translateX(0.75em);
+    }
+
     &.stayFixed {
-        width: 27%;
+        width: 100%;
+        background-color: transparent;
         @media (min-width: map-get($grid-breakpoints, md)) {
-            position: fixed;
+            position: absolute;
             top: 0;
-            // right: 20px;
-            background-color: $white;
-            border: 1px solid $gray-tint04;
-            transition-property: background-color, border-color;
-            transition-duration: $transition-duration-default;
-            transition-timing-function: $transition-ease-default;
+            display: flex;
+            justify-content: flex-end;
+            // transform: translateX(83px);
+
+            .wrapper {
+                width: auto;
+                // transform: translateX(0);
+                background-color: $white;
+                border-bottom: 1px solid $gray-tint04;
+                transition-property: background-color, border-color;
+                transition-duration: $transition-duration-default;
+                transition-timing-function: $transition-ease-default;
+
+                // @media (min-width: 2000px) {
+                //     transform: translateX(1.5em);
+                // }
+            }
         }
-        @media (min-width: map-get($grid-breakpoints, xl)) {
-            width: 100%;
-        }
+    }
+
+    .nav--small & {
+        // @media (min-width: map-get($grid-breakpoints, md)) {
+        //     transform: translateX(0);
+        // }
     }
 }
 
@@ -147,9 +176,6 @@
 }
 
 .container__meldingnavigatie {
-    position: absolute;
-    top: -35px;
-    left: 1em;
     display: flex;
     justify-content: flex-end;
     gap: 8px;
@@ -163,11 +189,12 @@
 
     span {
         white-space: nowrap;
-        line-height: 60px;
+        line-height: 36px;
         align-self: flex-start;
+        flex: 0;
     }
     .container__buttons {
-        width: 108px;
+        width: 80px;
         position: relative;
         > turbo-frame {
             width: auto;
@@ -182,26 +209,29 @@
 
         span.melding-navigatie {
             background-color: $gray-tint04;
-            border-color: $gray-tint04;
         }
 
         .melding-navigatie {
             display: inline-block;
-            width: 48px;
-            height: 48px;
-            border: 1px solid $gray-tint08;
+            width: 36px;
+            height: 36px;
             background-color: transparent;
             position: relative;
 
             svg {
                 position: absolute;
-                top: calc(50% - 12px);
-                left: 12px;
-                width: 24px;
-                height: 24px;
+                top: calc(50% - 10px);
+                left: 7px;
+                width: 20px;
+                height: 20px;
                 path {
                     fill: $gray-tint11;
                 }
+            }
+
+            &:hover,
+            &:focus {
+                background-color: $blue-200;
             }
         }
     }
@@ -230,7 +260,7 @@
     }
 }
 
-.section--seperated {
+.section--separated {
     .full-width {
         margin: 0 (-(map-get($container-margin, md)));
     }
