Styling the tabs

--- a/app/frontend/assets/styles/_theme.scss
+++ b/app/frontend/assets/styles/_theme.scss
@@ -21,6 +21,7 @@ $green-100: #f9fcfa;
 $green-200: #ebf5ed;
 $green-400: #cfdbd5;
 $green-600: #e3f4dd;
+$green-900: #00811f;
 
 //badges, beetje vreemde kleuren, nog niet elders tegengekomen
 $blue-light: #0079b8;
