--- a/app/frontend/assets/styles/components/_tabs.scss
+++ b/app/frontend/assets/styles/components/_tabs.scss
@@ -1,10 +1,13 @@
 .container__tabs {
     display: flex;
     background-color: $white;
-    padding: 0.75rem;
+    padding: 1rem;
 
-    p {
+    h3 {
         flex: 0 0 40%;
+        padding-top: 7px;
+        margin-bottom: 0;
+        border-bottom: 1px solid $blue-200;
     }
 }
 .list-tabs {
@@ -46,7 +49,7 @@
 
         dl {
             margin: 0;
-            padding: 0.75;
+            padding: 1rem;
         }
 
         &.active {
