--- a/app/frontend/assets/styles/components/_tabs.scss
+++ b/app/frontend/assets/styles/components/_tabs.scss
@@ -49,7 +49,7 @@
 
         dl {
             margin: 0;
-            padding: 1rem;
+            padding: 0 0.75rem 0.75rem;
         }
 
         &.active {
