--- a/app/frontend/assets/styles/components/_incident-details.scss
+++ b/app/frontend/assets/styles/components/_incident-details.scss
@@ -112,7 +112,8 @@
     > *:first-child {
         margin-top: 0;
     }
-    h1 {
+    h1,
+    h4 {
         margin-top: 0;
     }
     h2 {
@@ -133,6 +134,10 @@
         &:first-child {
             margin-top: 0;
         }
+    }
+
+    h4 {
+        font-size: 1rem;
     }
     p {
         margin-top: 0;
@@ -162,10 +167,11 @@
         label {
             display: inline-block;
             margin-bottom: 0.5rem;
+            font-size: 0.875rem;
         }
         input[type="checkbox"] {
             @include form-check-input();
-            vertical-align: sub;
+            vertical-align: middle;
         }
     }
 
@@ -308,6 +314,9 @@
         > span {
             margin-left: $input-padding-y;
             svg {
+                width: 20px;
+                height: 20px;
+                vertical-align: middle;
                 path {
                     fill: $green-tint01;
                 }
