--- a/app/frontend/assets/styles/components/_incident-details.scss
+++ b/app/frontend/assets/styles/components/_incident-details.scss
@@ -258,6 +258,9 @@
 }
 
 .incident-meta-list {
+    font-size: 0.75rem;
+    padding: 0.75rem 0 0;
+
     li {
         margin-bottom: 1rem;
         > *:last-child {
