Setup new takenblok

--- a/app/frontend/assets/styles/_base.scss
+++ b/app/frontend/assets/styles/_base.scss
@@ -687,7 +687,7 @@ body.no-js {
 // HELPER-CLASSES
 
 .has-background--white {
-    padding: 1em;
+    padding: 1rem;
     background-color: $white;
 }
 .keyboard-focus {
