--- a/app/apps/main/templates/melding/melding_detail.html
+++ b/app/apps/main/templates/melding/melding_detail.html
@@ -33,6 +33,7 @@
         {% context_template "melding_detail_titel.html" as titel_template %}
         {% context_template "melding_detail_melder.html" as melder_template %}
         {% context_template "melding_detail_acties.html" as acties_template %}
+        {% context_template "melding_detail_taken.html" as taken_template %}
         {% get_bijlagen melding as bijlagen %}
         {% with signalen=melding.signalen_voor_melding %}
             <div data-controller="detail"
@@ -84,6 +85,7 @@
                                     </div>
                                 </div>
                             </div>
+                            {% include taken_template %}
                             {% include "melding/melding_detail_locaties_lichtmasten.html" with locaties=type_locaties melding=melding lichtmasten=locaties.lichtmasten only %}
                             <div class="grid-container grid-container--half">
                                 <div class="grid-item no-margin">
