--- a/app/frontend/assets/styles/app.scss
+++ b/app/frontend/assets/styles/app.scss
@@ -7,6 +7,7 @@
 @import "./components/pageHeader";
 @import "./components/forms";
 @import "./components/list-incidents";
+@import "./components/block-taken";
 @import "./components/list-mutations";
 @import "./components/modal";
 @import "./components/filters";
