--- a/app/apps/main/templates/melding/melding_detail.html
+++ b/app/apps/main/templates/melding/melding_detail.html
@@ -86,7 +86,7 @@
                             </div>
                             {% include "melding/melding_detail_locaties_lichtmasten.html" with locaties=type_locaties melding=melding lichtmasten=locaties.lichtmasten only %}
                             <div class="grid-container grid-container--half">
-                                <div class="grid-item">
+                                <div class="grid-item no-margin">
                                     <section class="section--separated" data-testid="detailMelding">
                                         <div class="container__details melding">
                                             <h2>Meldingdetails</h2>
@@ -310,15 +310,15 @@
                                     {% include melder_template %}
                                     <div class="border-green print-only"></div>
                                 </div>
-                                <div class="grid-item aside">
-                                    <section class="section--separated">
-                                        <div class="container__details" data-detail-target="imageSliderWidth">
-                                            <h2>Foto's</h2>
-                                            {% if bijlagen|length > 0 %}
+                                <div class="grid-item aside no-margin">
+                                    {% if bijlagen|length > 0 %}
+                                        <section class="section--separated">
+                                            <div class="container__details" data-detail-target="imageSliderWidth">
+                                                <h2>Foto's</h2>
                                                 {% include "melding/detail/bijlagen.html" with bijlagen=bijlagen only %}
-                                            {% endif %}
-                                        </div>
-                                    </section>
+                                            </div>
+                                        </section>
+                                    {% endif %}
                                     {% if melding.signalen_voor_melding|length > 0 %}
                                         <div class="alert alert--info">
                                             <span>
