--- a/app/frontend/assets/styles/components/_details-summary.scss
+++ b/app/frontend/assets/styles/components/_details-summary.scss
@@ -75,6 +75,7 @@ details {
 
     &.details-form {
         margin-top: $alert-padding-y;
+        font-size: 0.875rem;
         summary {
             padding-left: 25px;
             color: $green-tint01;
