Small fixes action-block

--- a/app/apps/context/templates/standaard/melding_detail_acties.html
+++ b/app/apps/context/templates/standaard/melding_detail_acties.html
@@ -5,7 +5,7 @@
 {% block target %}melding_detail_acties{% endblock target %}
 <!-- djlint:on -->
 {% block content %}
-    <div class="wrapper">
+    <div class="wrapper--actions">
         <p>
             {% if perms.authorisatie.taak_aanmaken and taakr_taaktypes_niet_ingebruik_met_afdelingen and melding.status.naam != 'afgehandeld' and melding.status.naam != 'geannuleerd' and melding.status.naam != "pauze" and melding.status.naam != "wachten_melder" %}
                 <button type="button"
